# floating_point_type

./: .gitignore  CMakeLists.txt  README.md  bit_count.hpp  float_number.hpp  main.cpp  rounding_device.hpp  very_long_int.hpp
.github/workflows/: classroom.yml
